--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ install:
   - sleep 10
 before_script:
   - pip install pytest requests
+  - pip install pytest requests cv2 numpy glob
 script:
 - pytest tests/test.py
