--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - docker run -it -d -p 5000:5000 max-facial-age-estimator
   - sleep 10
 before_script:
-  - pip install pytest requests opencv-python numpy
+  - pip install pytest requests opencv-python numpy Pillow
 script:
 - pytest tests/test.py
