--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
 before_script:
   - pip install pytest requests opencv-python numpy Pillow
 script:
-- pytest -m tests/test.py
+- python -m pytest tests/test.py
