--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ services:
 install:
   - docker build -t max-facial-age-estimator .
   - docker run -it -d -p 5000:5000 max-facial-age-estimator
-  - sleep 10
-before_script:
   - pip install pytest requests opencv-python numpy Pillow
+before_script:
+  - sleep 30
 script:
-- python -m pytest tests/test.py
+  - pytest tests/test.py
